[package]
name = "visar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.visar_core]
version = "0.1.0"
path = "../visar_core"


[dependencies]
image = "0.23"
winit = "0.25.0"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.11"
pollster = "0.2"
rand = "0.8.4"
clap = { version = "3.0.1", features = ["derive"] }
bytemuck = { version = "1.4", features = [ "derive" ] }